[gd_scene load_steps=16 format=2]

[ext_resource path="res://packs/waypoints/trappist-1/sfx/zapsplat_science_fiction_door_open_hiss_air_release_then_auto_motor_drome_44436.mp3.ogg" type="AudioStream" id=1]
[ext_resource path="res://packs/waypoints/trappist-1/scenes/card.gd" type="Script" id=2]
[ext_resource path="res://packs/waypoints/trappist-1/sfx/industrial_refidgerators_bar_pub_run_whirr.mp3.ogg" type="AudioStream" id=3]
[ext_resource path="res://packs/waypoints/trappist-1/graphics/card_placement.glb" type="PackedScene" id=4]
[ext_resource path="res://packs/waypoints/trappist-1/sfx/zapsplat_science_fiction_console_error_feedback_tone_003_28903.mp3.ogg" type="AudioStream" id=5]
[ext_resource path="res://scenes/marker.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sfx/zapsplat_multimedia_notification_short_digital_futuristic_beep_generic_008_53944.mp3.ogg" type="AudioStream" id=7]
[ext_resource path="res://packs/waypoints/trappist-1/scenes/event3.tscn" type="PackedScene" id=8]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2, 1.37135, 2 )

[sub_resource type="Animation" id=2]
resource_name = "lift"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 5, 0 ), Vector3( 0, 5, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.5

[sub_resource type="BoxShape" id=4]
extents = Vector3( 2.06232, 0.661577, 1.63823 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 1.97314, 0.52916, 1.33239 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 1.98428, 0.370164, 1.50174 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 2.00658, 0.488875, 1.51817 )

[node name="card" type="Spatial" groups=[
"card",
"cardnav",
]]
script = ExtResource( 2 )

[node name="Area" type="Area" parent="." groups=[
"card",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.242642, 0 )
shape = SubResource( 1 )

[node name="Model" type="Spatial" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Model"]
anims/lift = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 10.0665, 0 )
visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/PopUp = SubResource( 3 )

[node name="Marker" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.2, 0, 0, 0, 1, 0, 1.30639, 0.0104721 )

[node name="path_marker" parent="." instance=ExtResource( 6 )]
visible = false

[node name="event3" parent="." instance=ExtResource( 8 )]
visible = false

[node name="standardMovement" type="Spatial" parent="."]

[node name="point1" type="Position3D" parent="standardMovement"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0735111, 0, -1.39524 )

[node name="point2" type="Position3D" parent="standardMovement"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.937275, 0, -0.366037 )

[node name="point3" type="Position3D" parent="standardMovement"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.17619, 0, -0.273177 )

[node name="point4" type="Position3D" parent="standardMovement"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0735111, 0, 1.04754 )

[node name="point5" type="Position3D" parent="standardMovement"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.937275, 0, 1.80104 )

[node name="point6" type="Position3D" parent="standardMovement"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.17619, 0, 1.80104 )

[node name="cautionMovement" type="Spatial" parent="."]
visible = false

[node name="point1" type="Position3D" parent="cautionMovement"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.974028, 0, -1.81942 )

[node name="point2" type="Position3D" parent="cautionMovement"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.0843, 0, -1.81942 )

[node name="point3" type="Position3D" parent="cautionMovement"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.974028, 0, 1.78266 )

[node name="point4" type="Position3D" parent="cautionMovement"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.0843, 0, 1.78266 )

[node name="point5" type="Position3D" parent="cautionMovement"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.974028, 0, -1.15781 )

[node name="point6" type="Position3D" parent="cautionMovement"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.0843, 0, 1.0843 )

[node name="combatMovement" type="Spatial" parent="."]
visible = false

[node name="point1" type="Position3D" parent="combatMovement"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.12106, 0, 0.937275 )

[node name="point2" type="Position3D" parent="combatMovement"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.13943, 0, 1.76428 )

[node name="point3" type="Position3D" parent="combatMovement"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.76428 )

[node name="point4" type="Position3D" parent="combatMovement"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2497, 0, 4.11666 )

[node name="point5" type="Position3D" parent="combatMovement"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.404314, 0, 4.94367 )

[node name="point6" type="Position3D" parent="combatMovement"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2497, 0, 4.94367 )

[node name="Audio" type="Node" parent="."]

[node name="ambient" type="AudioStreamPlayer3D" parent="Audio"]
transform = Transform( 1, 0, 0, 0, -0.122961, 0.992411, 0, -0.992411, -0.122961, 0, 2.37471, 0.538597 )
stream = ExtResource( 3 )
unit_size = 0.2
max_db = 0.0
autoplay = true
max_distance = 300.0
bus = "bgm"
emission_angle_enabled = true

[node name="error" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 5 )
bus = "sfx"

[node name="confirm" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 7 )
bus = "sfx"

[node name="AudioStreamPlayer" type="AudioStreamPlayer3D" parent="Audio"]
transform = Transform( -4.37114e-08, 1, -3.59989e-21, 4.37114e-08, 1.91069e-15, 1, 1, 4.37114e-08, -4.37114e-08, 0, 2.43339, 0 )
stream = ExtResource( 1 )
max_distance = 200.0
bus = "sfx"
emission_angle_enabled = true

[node name="Lights" type="Spatial" parent="."]

[node name="OmniLight" type="OmniLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.203658, 2.115, 1.57321 )
light_cull_mask = 4293918721
shadow_enabled = true
shadow_bias = 2.95
omni_range = 2.6

[node name="OmniLight2" type="OmniLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2.115, -1.50766 )
light_cull_mask = 4293918721
shadow_enabled = true
shadow_bias = 2.95
omni_range = 2.6

[node name="Connectors" type="Spatial" parent="."]

[node name="Connector1" type="Area" parent="Connectors" groups=[
"placement",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.98015 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Connectors/Connector1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.133726 )
shape = SubResource( 4 )

[node name="card_placement" parent="Connectors/Connector1" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.7, 0, 0, 0.0865889 )
visible = false

[node name="Connector2" type="Area" parent="Connectors" groups=[
"placement",
]]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -3.99537 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Connectors/Connector2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.30627e-08, 0, -0.3782 )
shape = SubResource( 5 )

[node name="card_placement" parent="Connectors/Connector2" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.7, -7.25569e-09, 0, 0.0829954 )
visible = false

[node name="Connector3" type="Area" parent="Connectors" groups=[
"placement",
]]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, -3.953, 0, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Connectors/Connector3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.93367e-08, 0, -0.181895 )
shape = SubResource( 6 )

[node name="card_placement" parent="Connectors/Connector3" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.7, 2.42144e-08, 0, 0.147253 )
visible = false

[node name="Connector4" type="Area" parent="Connectors" groups=[
"placement",
]]
transform = Transform( 7.54982e-08, 0, 1, 0, 1, 0, -1, 0, 7.54982e-08, 3.996, 0, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="Connectors/Connector4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.04891e-08, 0, -0.241324 )
shape = SubResource( 7 )

[node name="card_placement" parent="Connectors/Connector4" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.7, 7.45058e-09, 0, 0.0952415 )
visible = false
[connection signal="placed" from="." to="." method="_on_card_placed"]
[connection signal="body_shape_entered" from="Area" to="." method="_on_Area_body_shape_entered"]
[connection signal="body_shape_exited" from="Area" to="." method="_on_Area_body_shape_exited"]
[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]
[connection signal="animation_finished" from="Model/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
